# universal-video-transcriber

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: api.py  asr.py  fetcher.py  media.py  models.py  pipeline.py
skill/video-url-transcriber/: SKILL.md
skill/video-url-transcriber/agents/: openai.yaml
skill/video-url-transcriber/scripts/: run_api.py  transcribe_url.py
tests/: test_models.py
